syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.auth";
option java_outer_classname = "AuthProto";
option objc_class_prefix = "HLW";

package auth;

// The greeting service definition.
service Validator {
  // Sends a greeting
  rpc ValidateToken (AuthRequest) returns (AuthReply) {}
}

// The request message containing the user's name.
message AuthRequest {
  string token = 1;
}

// The response message containing the greetings
message AuthReply {
  bool is_valid = 1;
  bool is_admin = 2;
}